--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,34 +1,56 @@
 <div fxLayout="row" fxLayoutGap="20px" fxLayout.xs="column">
   <div fxFlex="45" fxLayout="column" fxLayoutGap="15px">
-    <app-post-card 
-      *ngFor="let feed of feeds" 
-      style="margin-bottom: 20px" 
-      infiniteScroll 
-      [infiniteScrollDistance]="5" 
-      [infiniteScrollThrottle]="50" 
-      (scrolled)="onScroll(meta?.next_page)" 
-      [hidden]="loading" 
-      [feed]="feed" 
-      [loading]="loading" 
-      [componentName]="componentName"
-      [meta]="meta">
+    <app-login></app-login>
+    <app-post-card *ngFor="let feed of feeds" style="margin-bottom: 20px" infiniteScroll [infiniteScrollDistance]="5"
+      [infiniteScrollThrottle]="50" (scrolled)="onScroll(meta?.next_page)" [hidden]="loading" [feed]="feed" [loading]="loading"
+      [componentName]="componentName" [meta]="meta">
     </app-post-card>
 
     <span *ngIf="meta?.next_page && loadingAnswer" style="text-align: center">
-  <mat-card class="example-card">
-    <facebook-content-loader></facebook-content-loader>
-  </mat-card>
-</span>
+      <mat-card class="example-card">
+        <facebook-content-loader></facebook-content-loader>
+      </mat-card>
+    </span>
 
-<mat-card class="example-card" *ngFor="let feed of feeds" [hidden]="!loading">
-  <facebook-content-loader></facebook-content-loader>
-</mat-card>
+    <mat-card class="example-card" *ngFor="let feed of feeds" [hidden]="!loading">
+      <facebook-content-loader></facebook-content-loader>
+    </mat-card>
   </div>
-  <div fxFlex="25" *ngIf="isDesktop$ | async">
+  <div fxFlex="20" *ngIf="isDesktop$ | async">
+    <mat-card class="set-margin">
+      <img matCardImage src="https://cdn.hashnode.com/res/hashnode/image/upload/v1535141934972/BywN_yAUQ.png">
+      <mat-card-content>
+        <h4>4 REASONS TO JOIN ONOZOR, RIGHT NOW!</h4>
+        <mat-list>
+          <mat-list-item>
+            <p mat-line>Friendly and inclusive</p>
+          </mat-list-item> 
+        </mat-list>
+        <mat-list>
+          <mat-list-item>
+            <p mat-line>Ask questions</p>
+          </mat-list-item>
+        </mat-list>
+        <mat-list>
+            <mat-list-item>
+              <p mat-line>Follow smart people</p>
+            </mat-list-item>
+          </mat-list>
+
+          <mat-list>
+              <mat-list-item>
+                <p mat-line>Subscribe to intersting communities</p>
+              </mat-list-item>
+            </mat-list>
+
+      </mat-card-content>
+    </mat-card>
+
     <mat-card class="example-card">
       <mat-card-content>
         <p>
-          The Shiba Inu is the smallest of the six original and distinct spitz breeds of dog from Japan. A small, agile dog that copes
+          The Shiba Inu is the smallest of the six original and distinct spitz breeds of dog from Japan. A small, agile
+          dog that copes
           very well with mountainous terrain, the Shiba Inu was originally bred for hunting.
         </p>
       </mat-card-content>
