--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,12 @@
 <div fxLayout="row" fxLayoutGap="20px" fxLayout.xs="column">
   <div fxFlex="45" fxLayout="column" fxLayoutGap="15px">
+    <mat-card color="primary" fxLayout="row" fxLayoutAlign="space-between center" *ngIf="isCurrentUser && !currentUser.last_name && !currentUser.first_name"  class="alert">
+      <div fxLayout="row" fxLayoutGap="20px" fxLayoutAlign="space-between center" >
+          <i class="material-icons warning-color" color="primary">warning</i> 
+          <h4 style="padding-top: 10px;">Welcome {{currentUser.username | titlecase }}! Your account needs to be updated!</h4>
+      </div>
+      <button mat-stroked-button color="primary" [routerLink]="['/users/settings']">Settings</button>
+    </mat-card>
     <app-login *ngIf="!isCurrentUser"></app-login>
     <app-post-card *ngFor="let feed of feeds" style="margin-bottom: 20px" infiniteScroll [infiniteScrollDistance]="5"
       [infiniteScrollThrottle]="50" (scrolled)="onScroll(meta?.next_page)" [hidden]="loading" [feed]="feed" [loading]="loading"
