--- a/src/app/users/profile/profile.component.scss
+++ b/src/app/users/profile/profile.component.scss
@@ -74,10 +74,14 @@
 
   .tab-backgroundcolor {
     background-color: #fff;
-    margin: 0px !important;
     a {
       text-decoration: none;
     }
   }
    
+ .mat-tab-links {
+  overflow: scroll !important;
+  position: relative;
+  display: flex;
+}
   
