fix share button when a user navigate with router

--- a/src/app/posts/posts.component.html
+++ b/src/app/posts/posts.component.html
@@ -27,7 +27,7 @@
         <app-comment-form *ngIf="post?.id" [slug]="post?.id" commentableType="Question"></app-comment-form>
       </div>
 
-      <div *ngIf="sharePost">
+      <div *ngIf="post?.sharePost">
         <app-share-post *ngIf="post?.id" [title]="post?.name" [postUrL]="postUrL" postType="Question"></app-share-post>
       </div>
     </mat-card>
