--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -22,6 +22,9 @@
     <mat-card class="example-card" *ngFor="let feed of feeds" [hidden]="!loading">
       <facebook-content-loader></facebook-content-loader>
     </mat-card>
+    <button mat-fab color="warn" [routerLink]="['/post/create']" style="position: fixed; bottom: 10px; z-index: 2000; right: 10px;" *ngIf="(isHandset$ | async )">
+      <mat-icon class="mat-18">edit</mat-icon>
+    </button>
   </div>
   <div fxFlex="20" *ngIf="isDesktop$ | async">
     <mat-card class="set-margin" *ngIf="!isCurrentUser">
