--- a/src/app/community/community/community.component.html
+++ b/src/app/community/community/community.component.html
@@ -1,4 +1,4 @@
-<div fxLayout="row" fxLayoutGap="20px" fxLayout.xs="column" style="margin-top: 66px;" [ngClass]="!(isHandset$ | async )? 'margin-top2' : 'ball'">
+<div fxLayout="row" fxLayoutGap="20px" fxLayout.xs="column">
   <div fxFlex="45" fxLayout="column" fxLayoutGap="30px">
     <mat-card style="margin-bottom: 30px;" fxLayout="row" fxLayoutGap="20px" fxLayoutAlign="start center">
       <div class="community-logo" fxFlex="20">
