fix(scroll): Make comment  icon on home page goes to post answers.

--- a/src/app/posts/posts.component.html
+++ b/src/app/posts/posts.component.html
@@ -1,4 +1,4 @@
-<div fxLayout="row" fxLayoutGap="20px" fxLayout.xs="column" style="margin-bottom: 20px">
+<div fxLayout="row" fxLayoutGap="20px" fxLayout.xs="column" style="margin-bottom: 20px" id="#post">
   <div fxFlex="50" fxLayout="column" fxLayoutGap="30px">
     <mat-card class="example-card" *ngIf="!loading">
       <div class="row" fxFlexAlign="start">
