--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -11,8 +11,8 @@
     <mat-icon matBadge="1" matBadgeColor="warn">notifications_none</mat-icon>
   </button>
 
-  <button mat-stroked-button  *ngIf="!isLoging" [routerLink]="['authenticate']">   
-     Getting Started
+  <button mat-stroked-button  *ngIf="!isLoging" [routerLink]="['authenticate']" class="min-font">   
+     Get started
   </button>
   
 
@@ -81,8 +81,8 @@
         </mat-menu>
       </div>
 
-      <button mat-stroked-button  *ngIf="!isLoging" [routerLink]="['authenticate']">   
-          Getting Started
+      <button mat-stroked-button  *ngIf="!isLoging" [routerLink]="['authenticate']" class="min-font">   
+          Get started
        </button>
     </div>
 
