--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,16 +1,22 @@
 <div fxLayout="row" fxLayoutGap="20px" fxLayout.xs="column">
   <div fxFlex="45" fxLayout="column" fxLayoutGap="15px">
-    <mat-card color="primary" fxLayout="row" fxLayoutAlign="space-between center" *ngIf="isCurrentUser && !currentUser.last_name && !currentUser.first_name"  class="alert">
-      <div fxLayout="row" fxLayoutGap="20px" fxLayoutAlign="space-between center" >
-          <i class="material-icons warning-color" color="primary">warning</i> 
-          <h4 style="padding-top: 10px;">Welcome {{currentUser.username | titlecase }}! Your account needs to be updated!</h4>
+    <mat-card color="primary" fxLayout="row" fxLayoutAlign="space-between center" *ngIf="isCurrentUser && !currentUser.last_name && !currentUser.first_name"
+      class="alert">
+      <div fxLayout="row" fxLayoutGap="20px" fxLayoutAlign="space-between center">
+        <i class="material-icons warning-color" color="primary">warning</i>
+        <h4 style="padding-top: 10px;">Welcome {{currentUser.username | titlecase }}! Your account needs to be updated!</h4>
       </div>
       <button mat-stroked-button color="primary" [routerLink]="['/users/settings']">Settings</button>
     </mat-card>
     <app-login *ngIf="!isCurrentUser"></app-login>
-    <app-post-card *ngFor="let feed of feeds" style="margin-bottom: 20px" infiniteScroll [infiniteScrollDistance]="5"
-      [infiniteScrollThrottle]="50" (scrolled)="onScroll(meta?.next_page)" [hidden]="loading" [feed]="feed" [loading]="loading"
-      [componentName]="componentName" [meta]="meta">
+    <app-post-card *ngFor="let feed of feeds" style="margin-bottom: 20px"
+        infiniteScroll [infiniteScrollDistance]="5"
+        [infiniteScrollThrottle]="50" 
+        (scrolled)="onScroll(meta?.next_page)" 
+        [hidden]="loading" 
+        [feed]="feed"
+        [componentName]="componentName" 
+        [meta]="meta">
     </app-post-card>
 
     <span *ngIf="meta?.next_page && loadingAnswer" style="text-align: center">
@@ -22,7 +28,8 @@
     <mat-card class="example-card" *ngFor="let feed of feeds" [hidden]="!loading">
       <facebook-content-loader></facebook-content-loader>
     </mat-card>
-    <button mat-fab color="warn" [routerLink]="['/post/create']" style="position: fixed; bottom: 10px; z-index: 2000; right: 10px;" *ngIf="(isHandset$ | async )">
+    <button mat-fab color="warn" [routerLink]="['/post/create']" style="position: fixed; bottom: 10px; z-index: 2000; right: 10px;"
+      *ngIf="(isHandset$ | async )">
       <mat-icon class="mat-18">edit</mat-icon>
     </button>
   </div>
@@ -34,7 +41,7 @@
         <mat-list>
           <mat-list-item>
             <p mat-line>Friendly and inclusive</p>
-          </mat-list-item> 
+          </mat-list-item>
         </mat-list>
         <mat-list>
           <mat-list-item>
@@ -42,16 +49,16 @@
           </mat-list-item>
         </mat-list>
         <mat-list>
-            <mat-list-item>
-              <p mat-line>Follow smart people</p>
-            </mat-list-item>
-          </mat-list>
+          <mat-list-item>
+            <p mat-line>Follow smart people</p>
+          </mat-list-item>
+        </mat-list>
 
-          <mat-list>
-              <mat-list-item>
-                <p mat-line>Subscribe to intersting communities</p>
-              </mat-list-item>
-            </mat-list>
+        <mat-list>
+          <mat-list-item>
+            <p mat-line>Subscribe to intersting communities</p>
+          </mat-list-item>
+        </mat-list>
 
       </mat-card-content>
     </mat-card>
