--- a/src/app/shared/post-card/post-card.component.html
+++ b/src/app/shared/post-card/post-card.component.html
@@ -21,8 +21,7 @@
     <p class="body-2">{{feed?.body | truncate:200}}</p>
   </mat-card-content>
 
-
-  <app-post-action-bar fxLayout="row" [post]="feed" postType="question" [componentName]='componentName'></app-post-action-bar>
+  <app-post-action-bar fxLayout="row" [post]="feed" postType="question" [title]='feed?.types' [componentName]='componentName'></app-post-action-bar>
 
   <div *ngIf="feed.sharePost">
     <app-share-post *ngIf="feed?.id" [title]="feed?.name" [postUrL]="postUrL+'posts/'+ feed?.slug" postType="Question"></app-share-post>
