--- a/src/app/posts/create-post/create-post.component.html
+++ b/src/app/posts/create-post/create-post.component.html
@@ -1,4 +1,4 @@
-<div fxLayout="row" fxLayoutGap="20px" fxLayout.xs="column"  [ngClass]="!(isHandset$ | async )? 'margin-top2' : 'ball'">
+<div fxLayout="row" fxLayoutGap="20px" fxLayout.xs="column">
   <div fxFlex="50" fxFlex.xs="100" fxLayout="column" fxLayoutGap="30px">
     <mat-card class="example-card">
 
