--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -4,7 +4,7 @@
     <input type="search" fxFlex="85" matInput placeholder="Search" class="">
   </div>
 
-  <button mat-raised-button [routerLink]="['/post/create']">Add Question</button>
+  <button mat-raised-button [routerLink]="['/posts/create']">Add Question</button>
 
 
   <button mat-icon-button *ngIf="isLoging">
