--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -33,3 +33,12 @@
   background: #ffdd01;
   padding: 10px;
 }
+
+.question-form {
+  cursor: text;
+  p {
+    font-size: 1.1rem;
+    font-weight: 400;
+    color: #9e9e9e;
+  }
+}
