--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -1,5 +1,3 @@
-
-
 .mat-toolbar.mat-primary {
   position: sticky;
   top: 0;
@@ -19,6 +17,7 @@
 .mat-card-title {
   display: block;
   margin-bottom: 8px;
+
   small {
     font-weight: normal;
   }
@@ -36,9 +35,55 @@
 
 .question-form {
   cursor: text;
+
   p {
-    font-size: 1.1rem;
+    font-size: 1rem;
     font-weight: 400;
     color: #9e9e9e;
   }
+}
+
+.home-categories {
+  overflow: auto;
+  position: relative;
+  .category-card {
+    height: 113px;
+    color: #fff;
+    text-align: center;
+    text-shadow: 1px 3px black;
+    padding: 50px;
+    border: 1px solid;
+    position: relative;
+    width: 100%;
+    .inner-div {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      color: #FFF;
+      background: rgba(0, 0, 0, .6);
+      border-radius: 8px;
+      p {
+        margin-bottom: 18px;
+        cursor: pointer;
+      }
+      button {
+        cursor: pointer;
+      }
+    }
+  }
+
+  .more-category {
+    background: #ffffff;
+    position: absolute;
+    z-index: 200;
+    height: 100%;
+    width: 20px;
+    right: 0;
+    box-shadow: -1 2 #0000007a;
+    border-left: 1px solid #00000075;
+  }
+
+
 }
