--- a/src/styles.css
+++ b/src/styles.css
@@ -26,15 +26,15 @@ body {
 
 .post-link {
   color: rgba(0,0,0,0.87);
-  font-size: 1.375rem;
-  font-weight: bold;
-  line-height: 28px;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  -webkit-line-clamp: 2;
-  display: -webkit-box;
-  max-height: 56px;
-  text-decoration: none;
+    font-size: 1.3rem;
+    font-weight: 500;
+    line-height: 1.3em;
+    /* overflow: hidden; */
+    text-overflow: ellipsis;
+    -webkit-line-clamp: 2;
+    display: -webkit-box;
+    /* max-height: 56px; */
+    text-decoration: none;
 }
 
 .post-link:hover {
@@ -69,5 +69,7 @@ body {
       min-width: 108px !important;
   }
 }
+
+
 
 
